--- a/aula06/ex001.html
+++ b/aula06/ex001.html
@@ -20,10 +20,8 @@
     <h1>Olá, Mundo!!</h1>
     <p>Já me livrei da maldição!</p>
     <script>
-       var n1 = Number (window.prompt('Digite um número '))
-       var n2 = Number (window.prompt('Digite outro número'))
-       var s = n1 + n2
-       window.alert ('A soma dos dois números resulta em: ' + s)
+       var nome = window.prompt('Qual seu nome?')
+       window.alert ('Seja bem-vindo ao site, ' + nome)
     </script>
 </body>
 </html>
