--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -4,26 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro Programa</title>
+    <title>Document</title>
     <style>
-        body{
-            background-color: rgba(52, 52, 145, 0.685);
-            font-size: 1.5em;
-            color: white;
-        }
-        h1{
-            color: rgb(224, 174, 11);
+        *{
+            font-family: Arial, Helvetica, sans-serif;
+            text-align: center;
         }
     </style>
 </head>
 <body>
-    <h1>Olá, Mundo!!</h1>
-    <p>Já me livrei da maldição!</p>
+    
     <script>
-       var n1 = Number (window.prompt('Digite um número '))
-       var n2 = Number (window.prompt('Digite outro número'))
-       var s = n1 + n2
-       window.alert ('A soma dos dois números resulta em: ' + s)
+        var nome = window.prompt('Qual seu nome?')
+        document.write('Olá, ' + nome + '! Seja bem-vindo <br/>')
+        document.write('Seu nome é composto por ' + nome.length+ ' letras <br/>')
+        document.write('Seu nome em maiúsculas é ' + nome.toUpperCase()+ '<br/>')
+        document.write('Seu nome em minúsculas é ' + nome.toLowerCase())
     </script>
 </body>
 </html>
