--- a/aula11/ex011.html
+++ b/aula11/ex011.html
@@ -33,7 +33,7 @@
 
             if(p == 'Brasil' || p == 'brasil'){
                 sec.innerHTML = `<p>Você é Brasileiro!</p>`
-            } else if(p > 0 || p < 0){
+            } else if(p >= 0 || p < 0){
                 sec.innerHTML = `<p>[ERRO]</p>`
                 section.style.color = `red`
             } else if(p == ''){
