--- a/aula12ex/ex01/index.html
+++ b/aula12ex/ex01/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans&display=swap" rel="stylesheet">
 </head>
 
-<body id="bod">
+<body>
     <div id="container">
         <header>
             <h1>Hora do dia</h1>
